--- a/app/templates/admin/grid.html
+++ b/app/templates/admin/grid.html
@@ -113,7 +113,7 @@
         </a>
         <ul class="treeview-menu">
             <li id="g-7-1">
-                <a href="#">
+                <a href="{{ url_for("admin.oplog") }}">
                     <i class="fa fa-circle-o"></i> 操作日志列表
                 </a>
             </li>
@@ -138,12 +138,12 @@
         </a>
         <ul class="treeview-menu">
             <li id="g-8-1">
-                <a href="#">
+                <a href="{{ url_for("admin.role_add") }}">
                     <i class="fa fa-circle-o"></i> 添加角色
                 </a>
             </li>
             <li id="g-8-2">
-                <a href="#">
+                <a href="{{ url_for("admin.role_list") }}">
                     <i class="fa fa-circle-o"></i> 角色列表
                 </a>
             </li>
@@ -157,12 +157,12 @@
         </a>
         <ul class="treeview-menu">
             <li id="g-9-1">
-                <a href="#">
+                <a href="{{ url_for("admin.auth_add") }}">
                     <i class="fa fa-circle-o"></i> 添加权限
                 </a>
             </li>
             <li id="g-9-2">
-                <a href="#">
+                <a href="{{ url_for('admin.auth_list') }}">
                     <i class="fa fa-circle-o"></i> 权限列表
                 </a>
             </li>
@@ -195,12 +195,12 @@
         </a>
         <ul class="treeview-menu">
             <li id="g-11-1">
-                <a href="#">
+                <a href="{{ url_for("admin.admin_add") }}">
                     <i class="fa fa-circle-o"></i> 添加管理员
                 </a>
             </li>
             <li id="g-11-2">
-                <a href="#">
+                <a href="{{ url_for("admin.admin_list") }}">
                     <i class="fa fa-circle-o"></i> 管理员列表
                 </a>
             </li>
