--- a/app/templates/home/404.html
+++ b/app/templates/home/404.html
@@ -5,6 +5,7 @@
     <title>404</title>
 </head>
 <body>
-
+<h1>操作失误</h1>
+<h2><a href="{{ url_for("home.index") }}">点击返回首页</a></h2>
 </body>
 </html>
